Added tests db